i changed the about me

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Saad Ahmad</span>
           <br />
-          I'm the Unknown Developer.
+          Coding the future, one line at a time.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I'm a passionate problem solver with an unwavering love for programming. Armed with my keyboard and a curious mind, I thrive on the challenges that coding presents. With each line of code, I embark on a journey of creativity, determined to find elegant solutions to complex problems.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                As a tech enthusiast, I relish the opportunity to explore and innovate, constantly seeking to expand my knowledge and skill set. Programming isn't just a career for me; it's an ever-evolving adventure that brings me immense joy and fulfillment.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,19 +111,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Robot Friends</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Robot Friends" is a captivating project that brings together the world of technology and creativity. In this innovative endeavor, I set out to design a digital universe where endearing and interactive robot companions come to life. These adorable robots are not just a visual treat, but they also boast intelligent algorithms, enabling them to engage with users on a personal level.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/aneagoie/robofriends.git"
                 >
                   See Live
                 </a>
@@ -132,7 +129,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/aneagoie/robofriends.git"
                 >
                   Source Code
                 </a>
@@ -140,7 +137,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/aneagoie/robofriends.git" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
