--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           Hi, my name is </h1> 
           
           <h1 class="ml5">
-            <span class="text-wrapper">
+            <span class="text-wrapper text-color-main">
               <span class="line line1"></span>
               <span class="letters letters-left">Saad</span>
               <span class="letters letters-right">Ahmad</span>
